# libfprint

./: README.md  meson.build
data/: autosuspend.hwdb
examples/: identify.c  img-capture.c  verify.c
libfprint/: fp-image-device.c  fp-image.c  fpi-assembling.c  fpi-print.c  fpi-usb-transfer.c  fprint-list-udev-hwdb.c  meson.build
libfprint/drivers/goodix/5395/: crypto_utils.c  crypto_utils.h  gea_decrypt.c  goodix5395.c  goodix5395_capture.c  goodix_device.c  goodix_device.h  goodix_gtls.c  goodix_gtls.h  goodix_protocol.c  goodix_protocol.h
libfprint/drivers/goodix/53x5/: goodix5395.c  goodix5395.h  goodix5395_capture.c  goodix5395_capture.h  goodix53x5_init.c  goodix53x5_init.h  goodix_device.c  goodix_device.h  goodix_gtls.c  goodix_protocol.c  goodix_protocol.h
libfprint/drivers/goodixtls/: goodix5395.c  goodix5395.h
libfprint/drivers/goodixtls/5395/: crypto_utils.c  crypto_utils.h  goodix5395.c  goodix5395.h  goodix5395_capture.c  goodix5395_capture.h  goodix_device.c  goodix_device.h  goodix_gtls.c  goodix_gtls.h  goodix_protocol.c  goodix_protocol.h
libfprint/sigfm/: binary.hpp  meson.build  sigfm.cpp  tests.cpp
